--- a/package.json
+++ b/package.json
@@ -12,6 +12,27 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
+		
+		"@emotion/css": "^11.1.3",
+		"@iconify/icons-akar-icons": "^1.1.7",
+		"@iconify/icons-dashicons": "^1.1.0",
+		"@iconify/icons-noto": "^1.1.1",
+		"@iconify/icons-subway": "^1.1.0",
+		"@iconify/svelte": "^1.0.4",
+		"@rollup/plugin-commonjs": "^17.0.0",
+		"@rollup/plugin-node-resolve": "^11.0.0",
+		"@rollup/plugin-typescript": "^8.0.0",
+		"@tsconfig/svelte": "^1.0.0",
+		"@types/gsap": "^1.20.2",
+		"gsap": "^3.6.1",
+		"rollup": "^2.3.4",
+		"rollup-plugin-css-only": "^3.1.0",
+		"rollup-plugin-livereload": "^2.0.0",
+		"rollup-plugin-svelte": "^7.0.0",
+		"rollup-plugin-terser": "^7.0.0",
+		"svelte-preprocess": "^6.0.2",
+		"tslib": "^2.0.0",
+
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
